tests/ui/traits/next-solver/cycles/coinduction/fixpoint-exponential-growth.stderr
error[E0275]: overflow evaluating the requirement `W<_>: Trait`
  --> $DIR/fixpoint-exponential-growth.rs:33:13
   |
LL |     impls::<W<_>>();
   |             ^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`fixpoint_exponential_growth`)
note: required by a bound in `impls`
  --> $DIR/fixpoint-exponential-growth.rs:30:13
   |
LL | fn impls<T: Trait>() {}
   |             ^^^^^ required by this bound in `impls`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
